tests/parsing/unknown_call_func_name/stderr.golden
error: unknown function 'foo'
bus.fbd +2:20
   |
 2 | 	c config; width = foo()
   | 	                  ^^^
